@@ -1,5 +1,8 @@
 2010-12-13  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* netrc.el (netrc-point-at-eol): Remove the unused netrc-point-at-old
+	and netrc-bound-and-true-p bindings.
+
 	* gnus-start.el (gnus-matches-options-n): Fix typo in last change.
 	(gnus-1): Don't create the nndrafts group twice.
 	(gnus-setup-news): There's no need to read the active file here, since
